# FloodSense-Data-Engine

./: .gitignore  README.md  README_CN.md  main.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
config/: config.yaml  prompts.json
data/.checkpoints/: image_spider.checkpoint
floodsense/: __init__.py
floodsense/crawlers/: __init__.py  base.py  image_spider.py  video_crawler.py
floodsense/crawlers/api_crawlers/: __init__.py  base_api_crawler.py  flickr_crawler.py  multi_source_crawler.py  pexels_crawler.py  unsplash_crawler.py  wikimedia_crawler.py
floodsense/crawlers/satellite_crawlers/: __init__.py  nasa_crawler.py
floodsense/processors/: __init__.py  base_processor.py  cleaning_pipeline.py  image_processor.py  video_processor.py
floodsense/synthesizers/: __init__.py  img_gen_models_client.py  nano_banana_client.py
floodsense/utils/: __init__.py  config.py  file_utils.py  i18n.py  logger.py  proxy.py
floodsense/validators/: __init__.py  base_validator.py  image_validator.py
scripts/: clean_data.py  crawl_images.py  crawl_professional_images.py  crawl_videos.py  extract_frames.py  generate_synthetic.py  validate_images.py
